fixed an indentation problem
git-svn-id: svn://svn.code.sf.net/p/instantsvc/code/branches/transition@517 4c906e0b-d405-0410-8fec-a64e80c61ebf

--- a/doc/papers/4th paper/instantsvc.tex
+++ b/doc/papers/4th paper/instantsvc.tex
@@ -272,6 +272,7 @@ They have the following syntax:
  */
 \end{verbatim}
 
+\noindent
 \verb|datatype| can be the name of a class
 or any of the built-in PHP data types:
 
